infrastructure/kubernetes/ingress/fiapx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiapx-ingress
  namespace: fiapx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/cors-enable: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://main.d13ms2nooclzwx.amplifyapp.com,https://d13ms2nooclzwx.amplifyapp.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-max-age: "1728000"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts:
    - api.wecando.click
    secretName: fiapx-tls-secret
  rules:
  - host: api.wecando.click
    http:
      paths:
      # Auth Service
      - path: /auth/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8082
      # Upload Service  
      - path: /upload/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: upload-service
            port:
              number: 8080
      # Processing Service
      - path: /processing/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: processing-service
            port:
              number: 8080
      # Storage Service
      - path: /storage/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: storage-service
            port:
              number: 8080
